# ecs-familiar

./: .gitignore  BRIDGE_README.md  Cargo.toml  Makefile  PRESERVED_HOT_PATH_LOGIC.md  README.md  README_SCHEMA_FORK.md  TESTING.md  copier.yaml  copier_setup.py  generate.py  generate_all.py  generate_components.py  requirements.txt  test_bridge.py  validate_schemas.py
assets/: sample_dag.yml  sample_schema.json
cold/: components.yaml  schemas.yaml
cold_path/: SCHEMA_UI_README.md  cli.py  familiar_ui.py  inspect_schemas.py  main.py  pyproject.toml  schema_integration.py  schema_web_ui.py
cold_path/assets/: sample_schema.json
cold_path/pydantic_ui/: datatables.py
cold_path/src/familiar/: __init__.py  components.py  config.py  dag.py  entities.py  laws.py  schema.py
dags/: quantum_decay_dag.yml  quantum_resonance_dag.yml
docs/: ARCHITECTURE.md  GRAPHIQL_GUIDE.md  VISUALIZATION_GUIDE.md
generators/: __init__.py  base.py  dags.py  ecs.py  entities.py  quantum.py  redpanda.py  windmill.py
hot_path/: Cargo.toml  build.rs
hot_path/assets/shaders/: binding_convergence.wgsl  moment_instanced.wgsl  thread_instanced.wgsl
hot_path/config/: default.toml
hot_path/src/: common.rs  components.rs  components_generated.rs  config.rs  ecs.rs  generated.rs  graphql.rs  law_executor.rs  lib.rs  main.rs  persistence.rs  schema_demo.rs  schemas.rs  systems.rs
html/: query_explorer.html  schema_codegen.html  schema_visualizer.html
redpanda/: redpanda.yml
templates/: commands.rs.jinja  component.rs.jinja  components.rs.jinja  dag.rs.jinja  entity_blueprints.rs.jinja  (+5 more)
(+12 files in other folders)
