[package]
name = "familiar_hot_path"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# Direct code generation - no external dependencies needed

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hecs = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = { version = "0.13", features = ["toml"] }
tokio = { version = "1", features = ["full"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8"
crossbeam-channel = "0.5"
colored = "2.0"  # For nice terminal output
thiserror = "1.0"  # For error handling 