[package]
name = "familiar_hot_path"
version = "0.1.0"
edition = "2021"

[dependencies]
hecs = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ecs-familiar"
path = "src/main.rs"
